Added s3 related install folder

--- a/S3-datastore/install_s3/org.apache.jackrabbit.oak.plugins.blob.datastore.S3DataStore.config
+++ b/S3-datastore/install_s3/org.apache.jackrabbit.oak.plugins.blob.datastore.S3DataStore.config
@@ -1,1 +1,9 @@
-
+accessKey="**************"
+connectionTimeout="120000"
+maxConnections="40"
+maxErrorRetry="10"
+s3Bucket="bucketname"
+s3Region="ap-south-1"
+secretKey="******************************************"
+socketTimeout="120000"
+writeThreads="30"
